--- a/MultiScaleWPF/MultiScaleWPF.csproj
+++ b/MultiScaleWPF/MultiScaleWPF.csproj
@@ -4,10 +4,16 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon />
+    <StartupObject>MultiScaleWPF.App</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Enums\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
 </Project>
